# remotemc

./: .emacs
redfish/: Cargo.toml
redfish/src/: computer_system.rs  lib.rs  object_link.rs  serde.rs
remotemc/: Cargo.toml  default-configuration.yaml
remotemc/src/: computer_system.rs  computer_system_collection.rs  main.rs  object_link.rs  ping.rs  remote_computer_system.rs  service_root.rs
remotemc/src/serde/: off_on.rs
