[package]
name = "redfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
serde = { version = "1.0.145", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
