[package]
name = "remotemc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
clap = { version = "3.2.22", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
