[package]
name = "remotemc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
clap = { version = "4.0.7", features = ["derive"] }
redfish = { path = "../redfish" }
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
tokio = { version = "1.21.2", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
